--- a/Capstone_1/TechHW_4_SDimitriadis/Main.Master
+++ b/Capstone_1/TechHW_4_SDimitriadis/Main.Master
@@ -5,28 +5,38 @@
 <html>
 <head runat="server">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title></title>
+    <link href="css/stylingsteve.css" rel="stylesheet" />
+    <title>APMS</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
         <div>
-            <h1 style="color: #b6ff00;">Automated Pet Medication System</h1>
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link active" href="Default.aspx">Default Page</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="PageTwo.aspx">Page Two</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="PageThree.aspx">Page Three</a>
-                </li>
-            </ul>
+            <nav class="navbar navbar-expand-lg m-0 p-0">
+                <a class="navbar-brand" href="Default.aspx">
+                    <img style="width: 100px; height: 100px;" src="images/vet-logo.png" />
+                </a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="Default.aspx">Vet <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="PageTwo.aspx">Customer Service Representative</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="PageThree.aspx">Dispensing Department</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
     </form>
+    <link href="css/stylingsteve.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 </body>
 </html>
